--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/index.vm
@@ -8,7 +8,7 @@
 $(function(){
 	$("#btn-openAccount").on("click",function(){
 		//check #register-org #mobileno
-		$("#form-index").attr("action", "../bankcard/addBankCardPage.htm");
+		$("#form-index").attr("action", "../bankcard/addBankCard.htm");
 		$("#form-index").submit();
 	});
 });
@@ -25,7 +25,7 @@ $(function(){
 			href="javascript:;">登录</a>|<a
 			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
 			href="javascript:;">我的幼富通</a>|<a class="last" 
-			href="javascript:;">帮助</a></div>
+			href="helpNotice.html">帮助</a></div>
     </div>
 </div>
 <form id="form-index" method="post" action="${staticDomain}/cust/index.htm">
