--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/register.vm
@@ -21,6 +21,13 @@ $(function(){
         }
     });
 	
+	$("form input[type=password]").each(function () {
+        var _this = $(this);
+		if(_this.val()!="") {
+            _this.siblings(".tips-normal").hide();
+        }
+    });
+	
 	
 	$("#btn-org").on("click",function(){
 		//check #register-org #mobileno
@@ -45,12 +52,8 @@ $(function(){
 <div class="body">
     <div class="inner container-register">
         <div class="register-tabs clearfix">
-			<!--
             <a class="tab tab-family fl on" href="javascript:;">家庭注册</a>
             <a class="tab tab-org fl" href="javascript:;">幼教机构注册</a>
-			-->
-			<a class="tab tab-family fl on" href="javascript:;">A注册</a>
-            <a class="tab tab-org fl" href="javascript:;">B注册</a>
         </div>
         <div class="register-panels">
             <div class="panel panel-family slide-on">
@@ -105,7 +108,7 @@ $(function(){
 				-->
             </div>
             <div class="panel panel-org slide-out">
-                <form method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="form-register common-form">
+                <form method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="common-form form-register">
                     <input id="invtp_org" type="hidden" name="invtp" value="${CustinfoVo.invtp}"/>
 					<ul>
                         <li
@@ -114,19 +117,19 @@ $(function(){
                         #end
                         >
                             <span class="form-title">经办人手机号</span>
-                            <input id="mobileno" name="mobileno" class="input-text" type="text" value="$!{CustinfoVo.mobileno}">
+                            <input id="mobileno" name="mobileno" class="ipt-phoneNum input-text" type="text" value="$!{CustinfoVo.mobileno}">
                             <span class="tips-normal">请输入手机号</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_mobileno}</span>
                         </li>
                         <li>
                             <span class="form-title">验证码</span>
-                            <input id="verifycode" name="verifycode" class="input-code" type="text" value="$!{CustinfoVo.verifycode}">
+                            <input id="verifycode" name="verifycode" class="ipt-code input-code" type="text" value="$!{CustinfoVo.verifycode}">
                             <span class="tips-normal">请输入验证码</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
                             <span class="form-title">手机验证码</span>
-                            <input id="msgcode" name="msgcode" class="input-code" type="text" value="$!{CustinfoVo.msgcode}">
+                            <input id="msgcode" name="msgcode" class="ipt-phoneCode input-code" type="text" value="$!{CustinfoVo.msgcode}">
                             <input class="input-button" type="button" value="获取验证码">
                             <span class="tips-normal">6位验证码</span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
@@ -137,7 +140,7 @@ $(function(){
                         #end
                         >
                             <span class="form-title">设置新密码</span>
-                            <input id="pswpwd" name="pswpwd" class="input-text" type="text" value="$!{CustinfoVo.pswpwd}">
+                            <input id="pswpwd" name="pswpwd" class="ipt-password1 input-text" type="password" value="$!{CustinfoVo.pswpwd}">
                             <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd}</span>
                         </li>
@@ -147,7 +150,7 @@ $(function(){
                         #end
                         >
                             <span class="form-title">确认新密码</span>
-                            <input id="pswpwd2" name="pswpwd2" class="input-text" type="text" value="$!{CustinfoVo.pswpwd2}">
+                            <input id="pswpwd2" name="pswpwd2" class="ipt-password2 input-text" type="password" value="$!{CustinfoVo.pswpwd2}">
                             <span class="tips-normal">请再次输入密码</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd2}</span>
                         </li>
@@ -172,13 +175,16 @@ $(function(){
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_business}</span>
                         </li>
                         <li>
+							<!--
                             <label><input class="input-checkbox" type="checkbox">我已阅读并同意<a href="javascript:;">《幼富通用户注册协议》</a></label>
+							-->
+							<label>点击注册表示同意<a href="javascript:;">《幼富通用户注册协议》</a></label>
                         </li>
                         <li>
 							<!--
                             <input class="input-button ok" type="submit" value="注&nbsp;册">
 							-->
-							<input id="btn-org" class="input-button ok" type="button" value="注&nbsp;册">
+							<input id="btn-org" class="ipt-submit input-button ok" type="button" value="注&nbsp;册">
                         </li>
                     </ul>
                 </form>
@@ -221,5 +227,6 @@ $(function(){
 </div>
 </div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
+<script src="${staticDomain}/js/scripts/register.js"></script>
 </body>
 </html>
