--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
@@ -37,18 +37,25 @@ $(function(){
                     if (b.errCode == "9999") {
 					
 						var errOtherInfo = b.errOtherInfo;
-						alert(errOtherInfo);
+						var errMsg = b.errMsg;
 						if(errOtherInfo=="银行开户户名"){
+							//经办人姓名
 							$("#errMsg_bankAcnm").addClass("error");
+							$("#errMsg_bankAcnm > .tips-check").html("<i class=icon></i>" + errMsg);
 						}else
 						if(errOtherInfo=="银行证件号码"){
+							//身份证号
 							$("#errMsg_bankIdno").addClass("error");
+							$("#errMsg_bankIdno > .tips-check").html("<i class=icon></i>" + errMsg);
 						}else
-						if(errOtherInfo=="银行编码"){
+						if(errOtherInfo=="银行卡号"){
 							$("#errMsg_bankAcco").addClass("error");
+							$("#errMsg_bankAcco > .tips-check").html("<i class=icon></i>" + errMsg);
 						}else
 						if(errOtherInfo=="银行开户手机号"){
+							//银行预留手机号
 							$("#errMsg_bankMobile").addClass("error");
+							$("#errMsg_bankMobile > .tips-check").html("<i class=icon></i>" + errMsg);
 						}else{
 							//
 						}
@@ -107,15 +114,20 @@ $(function(){
                     <span class="mark">企业网银开户即将上线</span></p>
                 </div>
                 <form id="form-addBankCardAuth" class="common-form"  method="post" action="${staticDomain}/bankcard/addBankCardAuth.htm">
-				<input id="custNo" name="custNo" type="text" value="$!{BankCardVo.custNo}">
-				<input id="organization" name="organization" type="text" value="$!{BankCardVo.organization}">
-				<input id="business" name="business" type="text" value="$!{BankCardVo.business}">
+				<input id="custNo" name="custNo" type="hidden" value="$!{BankCardVo.custNo}">
+				<input id="organization" name="organization" type="hidden" value="$!{BankCardVo.organization}">
+				<input id="business" name="business" type="hidden" value="$!{BankCardVo.business}">
 				<!--
-				<input id="tradePwd" name="tradePwd" type="text" value="$!{BankCardVo.tradePwd}">
-				<input id="tradePwd2" name="tradePwd2" type="text" value="$!{BankCardVo.tradePwd2}">
+				<input id="tradePwd" name="tradePwd" type="hidden" value="$!{BankCardVo.tradePwd}">
+				<input id="tradePwd2" name="tradePwd2" type="hidden" value="$!{BankCardVo.tradePwd2}">
 				-->
                     <div class="panel">
                         <ul>
+							#if($errMsg)
+							<li id="errMsg" class="error">
+                                <span class="tips-check"><i class="icon"></i>$!{errMsg}</span>
+                            </li>
+                            #end
                             <li class="clearfix">
                                 <span class="form-title">银行选择</span>
 								<div class="input-select">
@@ -166,9 +178,9 @@ $(function(){
                                 <span class="form-title">银行卡号</span>
                                 <input id="bankAcco" name="bankAcco" class="input-text" type="text" value="$!{BankCardVo.bankAcco}">
                                 <span class="tips-normal">银行卡号</span>
-                                <span class="tips-check"><i class="icon"></i>$!{errMsg_bankAcco}</span>
+                                <span class="tips-check"><i class="icon"></i>111$!{errMsg_bankAcco}</span>
                             </li>
-                            <li
+                            <li id="errMsg_bankMobile"
                             #if($errMsg_bankMobile)
                             class="error"
                             #end
@@ -178,7 +190,7 @@ $(function(){
                                 <span class="tips-normal">银行预留手机号</span>
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_bankMobile}</span>
                             </li>
-                            <li
+                            <li id="errMsg_msgcode"
                             #if($errMsg_msgcode)
                             class="error"
                             #end
