--- a/ufb.web/src/main/webapp/css/common.css
+++ b/ufb.web/src/main/webapp/css/common.css
@@ -121,7 +121,7 @@ a.btn {
 .tips-float {
 	position: absolute;
   	right: 100px;
-  	top: 80px;
+  	top: 25px;
   	line-height: 2;
 }
 .mark {
@@ -262,11 +262,29 @@ a.btn {
 	padding: 0;
 	background: none;
 }
+/* common - login */
+.login {
+	width: 230px;
+	height: 300px;
+	background-color: #ffffff;
+}
+.login-tabs .tab {
+	width: 115px;
+	height: 40px;
+	text-align: center;
+	line-height: 40px;
+	color: #ffffff;
+	font-size: 14px;
+}
+.login-tabs .tab.on {
+	background-color: #CB3849;
+}
 /* common - form */
 .common-form li {
 	padding:10px 0 10px 120px;
 	position: relative;
 	font-size: 14px;
+	line-height: 36px;
 }
 .common-form li .form-title {
 	position: absolute;
@@ -286,7 +304,6 @@ a.btn {
 	font-size: 14px;
 	font-family: "microsoft yahei";
 	color: inherit;
-	vertical-align: top;
 }
 .common-form li input.input-checkbox {
 	margin-right: 6px;
@@ -303,6 +320,10 @@ a.btn {
 .common-form li input.input-button.ok {
 	color: #ffffff;
 	background-color: #CB3849;
+}
+.common-form li input.input-button.off {
+	background-color: #b4b4b5;
+	color: #ffffff;
 }
 .common-form li input.input-code {
 	width: 95px;
@@ -358,7 +379,44 @@ a.btn {
 	color: #cb3849;
 	font-size: 12px;
 	text-decoration: underline;
+}/*
+.login-form .link-register {
+	color: #cb3849;
+	line-height: 30px;
 }
+.login-form span {
+	color: #ffffff;
+}
+.login-form .link-find {
+	color: #ffffff;
+}
+.login-form ul {
+	padding: 0 20px;
+}
+.login-form li {
+}
+.login-form li input.input-text {
+	width: 130px;
+	height: 40px;
+	border: 0;
+	padding:0 10px 0 50px;
+	margin-bottom: 10px;
+}
+.login-form li input.input-code {
+	width: 110px;
+	height: 40px;
+	border: 0;
+	padding: 0;
+	margin-bottom: 10px;
+}
+.login-form li input.input-button {
+	width: 190px;
+	height: 40px;
+	border: 0;
+	padding: 0;
+	background-color: #cb3849;
+	color: #ffffff;
+}*/
 .input-select {
 	width: 240px;
 	height: 34px;
@@ -644,6 +702,17 @@ a.btn {
 }
 
 /* index */
+
+/*.index .kv .inner {
+	position: relative;
+}
+.index .login {
+	position: absolute;
+	top: 50px;
+	right: 0px;
+	z-index: 1000;
+	background-color: #97c7df;
+}*/
 .index .side {
 	margin-top: 45px;
 	background-color: #fff;
@@ -701,24 +770,6 @@ a.btn {
 .index .bottom .item p {
 	font-size: 14px;
 }
-/* about */
-/*#about .body {
-	padding-top: 50px;
-	padding-bottom: 100px;
-	border-top: 1px solid #b7b7b7;
-	color: #595757;
-	font-size: 14px;
-	background-color: #fff;
-}
-#about .body h2 {
-	color: #2f8fbf;
-}
-#about .main {
-	width: 820px;
-}
-#about .side {
-	width: 140px;
-}*/
 /* register */
 .container-register {
 	padding-top: 50px;
