custmanger代码调整，及error页面整理

--- a/ufb.web/src/main/webapp/WEB-INF/templates/layout/default_1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/layout/default_1.vm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 #parse("control/common/head.vm")
-<body>
-<div id="index" class="container">
+<body>	
+<div class="container center">
 #parse("control/common/header.vm")
 $body
-#parse("control/common/footer.vm")
+#parse("control/common/footer1.vm")
 </div>
 $!{script}
 </body>
