--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
@@ -25,6 +25,12 @@ $(function(){
             _this.siblings(".tips-normal").hide();
         }
     });
+	$("form input[type=password]").each(function () {
+        var _this = $(this);
+		if(_this.val()!="") {
+            _this.siblings(".tips-normal").hide();
+        }
+    });
 });
 </script>
 </head>
@@ -73,7 +79,7 @@ $(function(){
                             #end
                             >
                                 <span class="form-title">幼教机构</span>
-								<input id="organization" name="organization" class="input-text" type="text" value="$!{BankCardVo.organization}">
+								<input id="organization" name="organization" class="ipt-organization input-text" type="text" value="$!{BankCardVo.organization}">
                                 <span class="tips-normal">请按照营业执照填写</span>
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_organization}</span>
                             </li>
@@ -83,7 +89,7 @@ $(function(){
                             #end
                             >
                                 <span class="form-title">营业执照</span>
-								<input id="business" name="business" class="input-text" type="text" value="$!{BankCardVo.business}">
+								<input id="business" name="business" class="ipt-business input-text" type="text" value="$!{BankCardVo.business}">
                                 <span class="tips-normal">请按照营业执照填写</span>
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_business}</span>
                             </li>
@@ -93,7 +99,7 @@ $(function(){
                             #end
                             >
                                 <span class="form-title">经办人姓名</span>
-                                <input id="bankAcnm" name="bankAcnm" class="input-text" type="text" value="$!{BankCardVo.bankAcnm}">
+                                <input id="bankAcnm" name="bankAcnm" class="ipt-bankAcnm input-text" type="text" value="$!{BankCardVo.bankAcnm}">
                                 <span class="tips-normal">请填写真实姓名</span>
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_bankAcnm}</span>
                             </li>
@@ -103,7 +109,7 @@ $(function(){
                             #end
                             >
                                 <span class="form-title">身份证号</span>
-                                <input id="bankIdno" name="bankIdno" class="input-text" type="text" value="$!{BankCardVo.bankIdno}">
+                                <input id="bankIdno" name="bankIdno" class="ipt-idCard input-text" type="text" value="$!{BankCardVo.bankIdno}">
                                 <span class="tips-normal">请填写身份证号</span>
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_bankIdno}</span>
                             </li>
@@ -113,7 +119,7 @@ $(function(){
                             #end
                             >
                                 <span class="form-title">交易密码</span>
-                                <input id="tradePwd" name="tradePwd" class="input-text" type="text" value="$!{BankCardVo.tradePwd}">
+                                <input id="tradePwd" name="tradePwd" class="ipt-password1 input-text" type="password" value="$!{BankCardVo.tradePwd}">
                                 <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_tradePwd}</span>
                             </li>
@@ -123,7 +129,7 @@ $(function(){
                             #end
                             >
                                 <span class="form-title">交易密码确认</span>
-                                <input id="tradePwd2" name="tradePwd2" class="input-text" type="text" value="$!{BankCardVo.tradePwd2}">
+                                <input id="tradePwd2" name="tradePwd2" class="ipt-password2 input-text" type="password" value="$!{BankCardVo.tradePwd2}">
                                 <span class="tips-normal">请再次输入密码</span>
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_tradePwd2}</span>
                             </li>
@@ -171,5 +177,6 @@ $(function(){
     </div>
 </div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
+<script src="${staticDomain}/js/scripts/register.js"></script>
 </body>
 </html>
