--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -23,9 +23,9 @@ $(function(){
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
         <div class="nav"><a 
 			href="javascript:;">登录</a>|<a
-			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
+			href="javascript:;">注册</a>|<a class="member" 
 			href="javascript:;">我的幼富通</a>|<a class="last" 
-			href="helpNotice.html">帮助</a></div>
+			href="javascript:;">帮助</a></div>
     </div>
 </div>
 <form id="form-index" method="post" action="${staticDomain}/cust/index.htm">
