--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerSuccessPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerSuccessPage.vm
@@ -9,6 +9,11 @@ $(function(){
 	$("#btn-login").on("click",function(){
 		$("#form-login").submit();
 	});
+	
+	$("#btn-logout").on("click",function(){
+		$("#form-login").attr("action", "../cust/logout.htm");
+		$("#form-login").submit();
+	});
 });
 </script>
 </head>
@@ -17,9 +22,9 @@ $(function(){
 <div class="header">
     <div class="inner clearfix rel">
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-        <div class="nav"><a 
-			href="javascript:;">登录</a>|<a 
-			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
+        <div class="nav"><a id="btn-logout"
+			href="javascript:;">登出</a>|<a 
+			href="javascript:;">注册</a>|<a
 			href="javascript:;">我的幼富通</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
     </div>
